logs/python-omhe.log
Listing '.'...
Listing './bin'...
Compiling './bin/bloodpressure.py'...
***   File "./bin/bloodpressure.py", line 13
    print "Sorry, I can't seem fo import the settings file."
                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/weight.py'...
***   File "./bin/weight.py", line 12
    print "Sorry, I can't seem to import pycurl for some reason."
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/wiibal-weighdemo.py'...
***   File "./bin/wiibal-weighdemo.py", line 17
    print "Sorry, I can't seem to import pycurl for some reason."
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/omhe'...
Listing './lib/python3.5/site-packages/omhe/bin'...
Listing './lib/python3.5/site-packages/omhe/core'...
Compiling './lib/python3.5/site-packages/omhe/core/parseomhe.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (parseomhe.py, line 83)
Compiling './lib/python3.5/site-packages/omhe/core/restcat-login-test.py'...
***   File "./lib/python3.5/site-packages/omhe/core/restcat-login-test.py", line 10
    print "I couldn't find your settings.py.  Perhaps you need to create one?"
                                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/omhe/core/validators'...
Compiling './lib/python3.5/site-packages/omhe/core/validators/bp_validator.py'...
***   File "./lib/python3.5/site-packages/omhe/core/validators/bp_validator.py", line 23
    raise InvalidValueError, "Invalid bp syntax"
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/omhe/core/validators/dt_helper_validator.py'...
***   File "./lib/python3.5/site-packages/omhe/core/validators/dt_helper_validator.py", line 23
    raise InvalidHelperFormatError, "The datetime was not formatted correctly."
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/omhe/core/validators/pbf_validator.py'...
***   File "./lib/python3.5/site-packages/omhe/core/validators/pbf_validator.py", line 9
    print omhe_value
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/omhe/core/validators/pts_helper_validator.py'...
***   File "./lib/python3.5/site-packages/omhe/core/validators/pts_helper_validator.py", line 14
    print omhe_value
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/omhe/core/validators/tz_helper_validator.py'...
***   File "./lib/python3.5/site-packages/omhe/core/validators/tz_helper_validator.py", line 17
    raise InvalidMessageError, "The omhe_command was not a string"
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/omhe/core/weight.py'...
***   File "./lib/python3.5/site-packages/omhe/core/weight.py", line 12
    print "Sorry, I can't seem to import pycurl for some reason."
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/omhe/hardware'...
Listing './lib/python3.5/site-packages/omhe/hardware/wiibalance'...
Compiling './lib/python3.5/site-packages/omhe/hardware/wiibalance/wiibal-weighdemo.py'...
***   File "./lib/python3.5/site-packages/omhe/hardware/wiibalance/wiibal-weighdemo.py", line 17
    print "Sorry, I can't seem to import pycurl for some reason."
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/omhe/hardware/wiibalance/wiibalance_webserver.py'...
***   File "./lib/python3.5/site-packages/omhe/hardware/wiibalance/wiibalance_webserver.py", line 7
    print "Sorry, I can't seem fo import the settings file."
                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/omhe/tests'...
Compiling './lib/python3.5/site-packages/omhe/tests/OMHETestCase.py'...
***   File "./lib/python3.5/site-packages/omhe/tests/OMHETestCase.py", line 15
    print msg_prefix
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/omhe/tests/bg_test.py'...
***   File "./lib/python3.5/site-packages/omhe/tests/bg_test.py", line 35
    print "================== START of BG TEST ================"
                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/omhe/tests/bp_test.py'...
***   File "./lib/python3.5/site-packages/omhe/tests/bp_test.py", line 39
    print "================== START of BP TEST ================"
                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/omhe/tests/ci_test.py'...
***   File "./lib/python3.5/site-packages/omhe/tests/ci_test.py", line 64
    print "================== START of CI TEST ================"
                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/omhe/tests/ffm_test.py'...
***   File "./lib/python3.5/site-packages/omhe/tests/ffm_test.py", line 33
    print "================== START of FFM TEST ================"
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/omhe/tests/fm_test.py'...
***   File "./lib/python3.5/site-packages/omhe/tests/fm_test.py", line 32
    print "================== START of FM TEST ================"
                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/omhe/tests/frv_test.py'...
***   File "./lib/python3.5/site-packages/omhe/tests/frv_test.py", line 71
    print "================== START of FRV TEST ================"
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/omhe/tests/md_test.py'...
***   File "./lib/python3.5/site-packages/omhe/tests/md_test.py", line 36
    print "================== START of MD TEST ================"
                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/omhe/tests/pbf_test.py'...
***   File "./lib/python3.5/site-packages/omhe/tests/pbf_test.py", line 33
    print "================== START of PBF TEST ================"
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/omhe/tests/pn_test.py'...
***   File "./lib/python3.5/site-packages/omhe/tests/pn_test.py", line 35
    print "================== START of PN TEST ================"
                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/omhe/tests/pts_test.py'...
***   File "./lib/python3.5/site-packages/omhe/tests/pts_test.py", line 35
    print "================== START of PTS TEST ================"
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/omhe/tests/test_utils.py'...
***   File "./lib/python3.5/site-packages/omhe/tests/test_utils.py", line 33
    print ""
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/omhe/tests/wt_test.py'...
***   File "./lib/python3.5/site-packages/omhe/tests/wt_test.py", line 37
    print "================== START of WT TEST ================"
                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_omhe-0.6.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
